syntax = "proto3";

package api.staff.v1;

option go_package = "staff/api/staff/v1;v1";

service Staff {
	rpc CreateStaff (CreateStaffRequest) returns (CreateStaffReply);
	rpc UpdateStaff (UpdateStaffRequest) returns (UpdateStaffReply);
	rpc DeleteStaff (DeleteStaffRequest) returns (DeleteStaffReply);

	rpc RecoveryStaff (RecoveryStaffRequest) returns (RecoveryStaffReply);

	rpc ListStaff (ListStaffRequest) returns (ListStaffReply);

	rpc VerifyStaff (VerifyStaffRequest) returns (VerifyStaffReply);
}

// 创建Staff请求接口参数
message CreateStaffRequest {
	string mobile = 1;
	string name = 2;
	string code = 3;
}
message CreateStaffReply {
	bool exec = 1;
}

message UpdateStaffRequest {
	int64 id = 1;
	string mobile = 2;
	string name = 3;
}
message UpdateStaffReply {
	bool exec = 1;
}

message DeleteStaffRequest {
	int64 id = 1;
}
message DeleteStaffReply {
	bool exec = 1;
}

message RecoveryStaffRequest {
	int64 id = 1;
}
message RecoveryStaffReply {
	bool exec = 1;
}

message ListStaffRequest {
	int32 pn = 1;
	int32 pSize = 2;
	string mobile = 3;
	string name = 4;
	bool isDeleted = 5;
}
message ListStaffReply {
	int32 total = 1;
	repeated StaffReply data = 2;
}
message StaffReply {
	int64 id = 1;
	string mobile = 2;
	string name = 3;
	string createdAt = 4;
	string updatedAt = 5;
}

message VerifyStaffRequest {
	string mobile = 1;
}
message VerifyStaffReply {
	bool exec = 1;
}